--- a/platformio.ini
+++ b/platformio.ini
@@ -7,15 +7,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-
-
-[env:esp32-c6-devkitm-1]
-platform = https://github.com/platformio/platform-espressif32.git
-board = esp32-c6-devkitm-1
+[env:esp32dev]
+platform = espressif32@^6.12.0
+board = esp32dev
 framework = arduino
 
 ; Custom serial monitor settings
-monitor_speed = 2000000
+monitor_speed = 921600
 monitor_filters = 
     colorize
     log2file
